--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.2.0",
     "axios": "^1.1.2",
+    "moment": "^2.29.4",
     "pinia": "^2.0.21",
     "primeicons": "^5.0.0",
     "primevue": "^3.17.0",
@@ -29,12 +30,16 @@
     "@vue/test-utils": "^2.0.2",
     "@vue/tsconfig": "^0.1.3",
     "autoprefixer": "^10.4.12",
-    "eslint": "^8.22.0",
-    "eslint-plugin-vue": "^9.3.0",
+    "eslint": "^8.25.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier-vue": "^4.2.0",
+    "eslint-plugin-vue": "^9.6.0",
     "jsdom": "^20.0.0",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.17",
     "prettier": "^2.7.1",
+    "sass": "^1.55.0",
+    "sass-loader": "^13.1.0",
     "tailwindcss": "^3.1.8",
     "typescript": "~4.7.4",
     "vite": "^3.0.9",
